<resources>
    <string name="app_name">Job</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="IndexId">首页</string>
    <string name="IndexMe">我的</string>
    <string name="logon">登录</string>
    <string name="login">立即注册</string>
    <string name="acount">还没有帐号?</string>
    <string name="UnsignIndex">请先登录以进行工作匹配</string>
    <string name="phonenumber">请输入你的手机号码</string>
    <string name="password">请输入你的密码</string>
</resources>